--- a/src/dyntext/Makefile-depend
+++ b/src/dyntext/Makefile-depend
@@ -26,6 +26,6 @@ $(OBJ)/dyntext.o: dyntext.cc ../include/structs.h ../include/defs.h \
   ../include/utils.h ../include/handler.h ../include/db.h \
   /usr/local/pgsql/include/libpq-fe.h \
   /usr/local/pgsql/include/postgres_ext.h ../include/editor.h \
-  ../include/screen.h ../include/player_table.h
+  ../include/prog.h ../include/screen.h ../include/player_table.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 OBJFILES= $(OBJ)/dyntext.o
