--- a/src/help/Makefile-depend
+++ b/src/help/Makefile-depend
@@ -55,6 +55,7 @@ $(OBJ)/help_item.o: help_item.cc ../include/structs.h ../include/defs.h \
   ../include/zone_data.h ../include/ban.h ../include/utils.h \
   ../include/help.h ../include/db.h /usr/local/pgsql/include/libpq-fe.h \
   /usr/local/pgsql/include/postgres_ext.h ../include/editor.h \
-  ../include/comm.h ../include/screen.h ../include/handler.h
+  ../include/prog.h ../include/comm.h ../include/screen.h \
+  ../include/handler.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 OBJFILES= $(OBJ)/help_collection.o $(OBJ)/help_item.o
