--- a/src/mobiles/Makefile-depend
+++ b/src/mobiles/Makefile-depend
@@ -120,9 +120,9 @@ $(OBJ)/mail.o: mail.cc ../include/actions.h ../include/interpreter.h \
   ../include/utils.h ../include/comm.h ../include/db.h \
   /usr/local/pgsql/include/libpq-fe.h \
   /usr/local/pgsql/include/postgres_ext.h ../include/handler.h \
-  ../include/mail.h ../include/editor.h ../include/screen.h \
-  ../include/clan.h ../include/materials.h ../include/player_table.h \
-  ../include/accstr.h
+  ../include/mail.h ../include/editor.h ../include/prog.h \
+  ../include/screen.h ../include/clan.h ../include/materials.h \
+  ../include/player_table.h ../include/accstr.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/mobact.o: mobact.cc ../include/structs.h ../include/defs.h \
   ../include/macros.h ../include/constants.h ../include/obj_data.h \
