--- a/src/net/Makefile-depend
+++ b/src/net/Makefile-depend
@@ -56,8 +56,8 @@ $(OBJ)/comm.o: comm.cc ../include/macros.h ../include/structs.h \
   ../include/screen.h ../include/handler.h ../include/db.h \
   /usr/local/pgsql/include/libpq-fe.h \
   /usr/local/pgsql/include/postgres_ext.h ../include/editor.h \
-  ../include/house.h ../include/vehicle.h ../include/help.h \
-  ../include/accstr.h ../include/player_table.h ../include/prog.h
+  ../include/prog.h ../include/house.h ../include/vehicle.h \
+  ../include/help.h ../include/accstr.h ../include/player_table.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/gnetsys.o: gnetsys.cc ../include/structs.h ../include/defs.h \
   ../include/macros.h ../include/constants.h ../include/obj_data.h \
@@ -119,11 +119,12 @@ $(OBJ)/nanny.o: nanny.cc ../include/structs.h ../include/defs.h \
   ../include/zone_data.h ../include/ban.h ../include/comm.h \
   ../include/db.h /usr/local/pgsql/include/libpq-fe.h \
   /usr/local/pgsql/include/postgres_ext.h ../include/editor.h \
-  ../include/utils.h ../include/spells.h ../include/handler.h \
-  ../include/mail.h ../include/screen.h ../include/help.h \
-  ../include/char_class.h ../include/actions.h ../include/mobact.h \
-  ../include/clan.h ../include/vehicle.h ../include/house.h \
-  ../include/login.h ../include/bomb.h ../include/security.h \
-  ../include/quest.h ../include/player_table.h ../include/language.h
+  ../include/prog.h ../include/utils.h ../include/spells.h \
+  ../include/handler.h ../include/mail.h ../include/screen.h \
+  ../include/help.h ../include/char_class.h ../include/actions.h \
+  ../include/mobact.h ../include/clan.h ../include/vehicle.h \
+  ../include/house.h ../include/login.h ../include/bomb.h \
+  ../include/security.h ../include/quest.h ../include/player_table.h \
+  ../include/language.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 OBJFILES= $(OBJ)/ban.o $(OBJ)/comm.o $(OBJ)/gnetsys.o $(OBJ)/nanny.o
