--- a/src/objects/Makefile-depend
+++ b/src/objects/Makefile-depend
@@ -25,8 +25,9 @@ $(OBJ)/boards.o: boards.cc ../include/structs.h ../include/defs.h \
   ../include/zone_data.h ../include/ban.h ../include/utils.h \
   ../include/comm.h ../include/db.h /usr/local/pgsql/include/libpq-fe.h \
   /usr/local/pgsql/include/postgres_ext.h ../include/editor.h \
-  ../include/boards.h ../include/handler.h ../include/screen.h \
-  ../include/clan.h ../include/accstr.h ../include/security.h
+  ../include/prog.h ../include/boards.h ../include/handler.h \
+  ../include/screen.h ../include/clan.h ../include/accstr.h \
+  ../include/security.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/bomb.o: bomb.cc ../include/structs.h ../include/defs.h \
   ../include/macros.h ../include/constants.h ../include/obj_data.h \
