--- a/src/olc/Makefile-depend
+++ b/src/olc/Makefile-depend
@@ -26,12 +26,13 @@ $(OBJ)/olc.o: olc.cc ../include/structs.h ../include/defs.h ../include/macros.h 
   ../include/comm.h ../include/handler.h ../include/db.h \
   /usr/local/pgsql/include/libpq-fe.h \
   /usr/local/pgsql/include/postgres_ext.h ../include/editor.h \
-  ../include/security.h ../include/screen.h ../include/olc.h \
-  ../include/flow_room.h ../include/spells.h ../include/materials.h \
-  ../include/vehicle.h ../include/specs.h ../include/smokes.h \
-  ../include/paths.h ../include/bomb.h ../include/guns.h \
-  ../include/char_class.h ../include/actions.h ../include/mobact.h \
-  ../include/language.h ../include/mobile_map.h ../include/object_map.h
+  ../include/prog.h ../include/security.h ../include/screen.h \
+  ../include/olc.h ../include/flow_room.h ../include/spells.h \
+  ../include/materials.h ../include/vehicle.h ../include/specs.h \
+  ../include/smokes.h ../include/paths.h ../include/bomb.h \
+  ../include/guns.h ../include/char_class.h ../include/actions.h \
+  ../include/mobact.h ../include/language.h ../include/mobile_map.h \
+  ../include/object_map.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/olc_mob.o: olc_mob.cc ../include/structs.h ../include/defs.h \
   ../include/macros.h ../include/constants.h ../include/obj_data.h \
@@ -62,9 +63,9 @@ $(OBJ)/olc_mob.o: olc_mob.cc ../include/structs.h ../include/defs.h \
   ../include/spells.h ../include/mobact.h ../include/handler.h \
   ../include/db.h /usr/local/pgsql/include/libpq-fe.h \
   /usr/local/pgsql/include/postgres_ext.h ../include/editor.h \
-  ../include/security.h ../include/screen.h ../include/olc.h \
-  ../include/flow_room.h ../include/specs.h ../include/language.h \
-  ../include/mobile_map.h
+  ../include/prog.h ../include/security.h ../include/screen.h \
+  ../include/olc.h ../include/flow_room.h ../include/specs.h \
+  ../include/language.h ../include/mobile_map.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/olc_obj.o: olc_obj.cc ../include/structs.h ../include/defs.h \
   ../include/macros.h ../include/constants.h ../include/obj_data.h \
@@ -94,9 +95,9 @@ $(OBJ)/olc_obj.o: olc_obj.cc ../include/structs.h ../include/defs.h \
   ../include/comm.h ../include/handler.h ../include/db.h \
   /usr/local/pgsql/include/libpq-fe.h \
   /usr/local/pgsql/include/postgres_ext.h ../include/editor.h \
-  ../include/security.h ../include/screen.h ../include/olc.h \
-  ../include/spells.h ../include/materials.h ../include/specs.h \
-  ../include/player_table.h ../include/object_map.h
+  ../include/prog.h ../include/security.h ../include/screen.h \
+  ../include/olc.h ../include/spells.h ../include/materials.h \
+  ../include/specs.h ../include/player_table.h ../include/object_map.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/olc_srch.o: olc_srch.cc ../include/structs.h ../include/defs.h \
   ../include/macros.h ../include/constants.h ../include/obj_data.h \
@@ -156,9 +157,9 @@ $(OBJ)/olc_wld.o: olc_wld.cc ../include/structs.h ../include/defs.h \
   ../include/comm.h ../include/handler.h ../include/db.h \
   /usr/local/pgsql/include/libpq-fe.h \
   /usr/local/pgsql/include/postgres_ext.h ../include/editor.h \
-  ../include/security.h ../include/screen.h ../include/olc.h \
-  ../include/flow_room.h ../include/clan.h ../include/specs.h \
-  ../include/house.h ../include/player_table.h ../include/prog.h
+  ../include/prog.h ../include/security.h ../include/screen.h \
+  ../include/olc.h ../include/flow_room.h ../include/clan.h \
+  ../include/specs.h ../include/house.h ../include/player_table.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/olc_zon.o: olc_zon.cc ../include/structs.h ../include/defs.h \
   ../include/macros.h ../include/constants.h ../include/obj_data.h \
@@ -188,9 +189,9 @@ $(OBJ)/olc_zon.o: olc_zon.cc ../include/structs.h ../include/defs.h \
   ../include/comm.h ../include/handler.h ../include/db.h \
   /usr/local/pgsql/include/libpq-fe.h \
   /usr/local/pgsql/include/postgres_ext.h ../include/editor.h \
-  ../include/security.h ../include/screen.h ../include/olc.h \
-  ../include/flow_room.h ../include/paths.h ../include/player_table.h \
-  ../include/mobile_map.h
+  ../include/prog.h ../include/security.h ../include/screen.h \
+  ../include/olc.h ../include/flow_room.h ../include/paths.h \
+  ../include/player_table.h ../include/mobile_map.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/polc.o: polc.cc ../include/structs.h ../include/defs.h \
   ../include/macros.h ../include/constants.h ../include/obj_data.h \
