--- a/src/editor/Makefile-depend
+++ b/src/editor/Makefile-depend
@@ -23,9 +23,7 @@ $(OBJ)/boardeditor.o: boardeditor.cc ../include/screen.h ../include/desc_data.h 
   /usr/include/libxml2/libxml/threads.h ../include/tmpstr.h \
   ../include/creature_list.h ../include/room_data.h ../include/search.h \
   ../include/weather.h ../include/zone_data.h ../include/ban.h \
-  ../include/account.h ../include/interpreter.h \
-  /usr/local/pgsql/include/libpq-fe.h \
-  /usr/local/pgsql/include/postgres_ext.h ../include/utils.h \
+  ../include/account.h ../include/interpreter.h ../include/utils.h \
   ../include/login.h ../include/boards.h ../include/mail.h \
   ../include/editor.h ../include/prog.h ../include/accstr.h \
   ../include/help.h ../include/player_table.h
@@ -55,9 +53,7 @@ $(OBJ)/editor.o: editor.cc ../include/screen.h ../include/desc_data.h \
   /usr/include/libxml2/libxml/threads.h ../include/tmpstr.h \
   ../include/creature_list.h ../include/room_data.h ../include/search.h \
   ../include/weather.h ../include/zone_data.h ../include/ban.h \
-  ../include/account.h ../include/interpreter.h \
-  /usr/local/pgsql/include/libpq-fe.h \
-  /usr/local/pgsql/include/postgres_ext.h ../include/utils.h \
+  ../include/account.h ../include/interpreter.h ../include/utils.h \
   ../include/login.h ../include/boards.h ../include/mail.h \
   ../include/editor.h ../include/prog.h ../include/accstr.h \
   ../include/help.h ../include/player_table.h
@@ -87,9 +83,7 @@ $(OBJ)/fileeditor.o: fileeditor.cc ../include/screen.h ../include/desc_data.h \
   /usr/include/libxml2/libxml/threads.h ../include/tmpstr.h \
   ../include/creature_list.h ../include/room_data.h ../include/search.h \
   ../include/weather.h ../include/zone_data.h ../include/ban.h \
-  ../include/account.h ../include/interpreter.h \
-  /usr/local/pgsql/include/libpq-fe.h \
-  /usr/local/pgsql/include/postgres_ext.h ../include/utils.h \
+  ../include/account.h ../include/interpreter.h ../include/utils.h \
   ../include/login.h ../include/boards.h ../include/mail.h \
   ../include/editor.h ../include/prog.h ../include/accstr.h \
   ../include/help.h ../include/player_table.h
@@ -119,9 +113,7 @@ $(OBJ)/maileditor.o: maileditor.cc ../include/screen.h ../include/desc_data.h \
   /usr/include/libxml2/libxml/threads.h ../include/tmpstr.h \
   ../include/creature_list.h ../include/room_data.h ../include/search.h \
   ../include/weather.h ../include/zone_data.h ../include/ban.h \
-  ../include/account.h ../include/interpreter.h \
-  /usr/local/pgsql/include/libpq-fe.h \
-  /usr/local/pgsql/include/postgres_ext.h ../include/utils.h \
+  ../include/account.h ../include/interpreter.h ../include/utils.h \
   ../include/login.h ../include/boards.h ../include/mail.h \
   ../include/editor.h ../include/prog.h ../include/accstr.h \
   ../include/help.h ../include/player_table.h
@@ -151,9 +143,7 @@ $(OBJ)/polleditor.o: polleditor.cc ../include/screen.h ../include/desc_data.h \
   /usr/include/libxml2/libxml/threads.h ../include/tmpstr.h \
   ../include/creature_list.h ../include/room_data.h ../include/search.h \
   ../include/weather.h ../include/zone_data.h ../include/ban.h \
-  ../include/account.h ../include/interpreter.h \
-  /usr/local/pgsql/include/libpq-fe.h \
-  /usr/local/pgsql/include/postgres_ext.h ../include/utils.h \
+  ../include/account.h ../include/interpreter.h ../include/utils.h \
   ../include/login.h ../include/boards.h ../include/mail.h \
   ../include/editor.h ../include/prog.h ../include/accstr.h \
   ../include/help.h ../include/player_table.h
@@ -183,9 +173,7 @@ $(OBJ)/progeditor.o: progeditor.cc ../include/screen.h ../include/desc_data.h \
   /usr/include/libxml2/libxml/threads.h ../include/tmpstr.h \
   ../include/creature_list.h ../include/room_data.h ../include/search.h \
   ../include/weather.h ../include/zone_data.h ../include/ban.h \
-  ../include/account.h ../include/interpreter.h \
-  /usr/local/pgsql/include/libpq-fe.h \
-  /usr/local/pgsql/include/postgres_ext.h ../include/utils.h \
+  ../include/account.h ../include/interpreter.h ../include/utils.h \
   ../include/login.h ../include/boards.h ../include/mail.h \
   ../include/editor.h ../include/prog.h ../include/accstr.h \
   ../include/help.h ../include/player_table.h
@@ -215,9 +203,7 @@ $(OBJ)/texteditor.o: texteditor.cc ../include/screen.h ../include/desc_data.h \
   /usr/include/libxml2/libxml/threads.h ../include/tmpstr.h \
   ../include/creature_list.h ../include/room_data.h ../include/search.h \
   ../include/weather.h ../include/zone_data.h ../include/ban.h \
-  ../include/account.h ../include/interpreter.h \
-  /usr/local/pgsql/include/libpq-fe.h \
-  /usr/local/pgsql/include/postgres_ext.h ../include/utils.h \
+  ../include/account.h ../include/interpreter.h ../include/utils.h \
   ../include/login.h ../include/boards.h ../include/mail.h \
   ../include/editor.h ../include/prog.h ../include/accstr.h \
   ../include/help.h ../include/player_table.h
