--- a/src/interpreter/Makefile-depend
+++ b/src/interpreter/Makefile-depend
@@ -23,10 +23,8 @@ $(OBJ)/group.o: group.cc /usr/include/libxml2/libxml/parser.h \
   ../include/account.h ../include/desc_data.h ../include/interpreter.h \
   ../include/room_data.h ../include/search.h ../include/weather.h \
   ../include/zone_data.h ../include/ban.h ../include/utils.h \
-  ../include/db.h /usr/local/pgsql/include/libpq-fe.h \
-  /usr/local/pgsql/include/postgres_ext.h ../include/comm.h \
-  ../include/security.h ../include/screen.h ../include/tokenizer.h \
-  ../include/player_table.h
+  ../include/db.h ../include/comm.h ../include/security.h \
+  ../include/screen.h ../include/tokenizer.h ../include/player_table.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/interpreter.o: interpreter.cc ../include/structs.h ../include/defs.h \
   ../include/macros.h ../include/constants.h ../include/obj_data.h \
@@ -53,13 +51,12 @@ $(OBJ)/interpreter.o: interpreter.cc ../include/structs.h ../include/defs.h \
   ../include/account.h ../include/desc_data.h ../include/interpreter.h \
   ../include/room_data.h ../include/search.h ../include/weather.h \
   ../include/zone_data.h ../include/ban.h ../include/comm.h \
-  ../include/db.h /usr/local/pgsql/include/libpq-fe.h \
-  /usr/local/pgsql/include/postgres_ext.h ../include/utils.h \
-  ../include/spells.h ../include/handler.h ../include/mail.h \
-  ../include/screen.h ../include/help.h ../include/char_class.h \
-  ../include/actions.h ../include/mobact.h ../include/clan.h \
-  ../include/vehicle.h ../include/house.h ../include/login.h \
-  ../include/bomb.h ../include/security.h ../include/prog.h
+  ../include/db.h ../include/utils.h ../include/spells.h \
+  ../include/handler.h ../include/mail.h ../include/screen.h \
+  ../include/help.h ../include/char_class.h ../include/actions.h \
+  ../include/mobact.h ../include/clan.h ../include/vehicle.h \
+  ../include/house.h ../include/login.h ../include/bomb.h \
+  ../include/security.h ../include/prog.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/security.o: security.cc /usr/include/libxml2/libxml/parser.h \
   /usr/include/libxml2/libxml/xmlversion.h \
@@ -86,9 +83,8 @@ $(OBJ)/security.o: security.cc /usr/include/libxml2/libxml/parser.h \
   ../include/account.h ../include/desc_data.h ../include/interpreter.h \
   ../include/room_data.h ../include/search.h ../include/weather.h \
   ../include/zone_data.h ../include/ban.h ../include/utils.h \
-  ../include/db.h /usr/local/pgsql/include/libpq-fe.h \
-  /usr/local/pgsql/include/postgres_ext.h ../include/comm.h \
-  ../include/tokenizer.h ../include/screen.h ../include/security.h \
-  ../include/boards.h ../include/player_table.h
+  ../include/db.h ../include/comm.h ../include/tokenizer.h \
+  ../include/screen.h ../include/security.h ../include/boards.h \
+  ../include/player_table.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 OBJFILES= $(OBJ)/group.o $(OBJ)/interpreter.o $(OBJ)/security.o
