--- a/src/search/Makefile-depend
+++ b/src/search/Makefile-depend
@@ -24,11 +24,9 @@ $(OBJ)/prog.o: prog.cc ../include/structs.h ../include/defs.h \
   ../include/room_data.h ../include/search.h ../include/weather.h \
   ../include/zone_data.h ../include/ban.h ../include/comm.h \
   ../include/utils.h ../include/handler.h ../include/db.h \
-  /usr/local/pgsql/include/libpq-fe.h \
-  /usr/local/pgsql/include/postgres_ext.h ../include/spells.h \
-  ../include/screen.h ../include/vehicle.h ../include/fight.h \
-  ../include/security.h ../include/actions.h ../include/house.h \
-  ../include/prog.h ../include/clan.h
+  ../include/spells.h ../include/screen.h ../include/vehicle.h \
+  ../include/fight.h ../include/security.h ../include/actions.h \
+  ../include/house.h ../include/prog.h ../include/clan.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/search.o: search.cc ../include/structs.h ../include/defs.h \
   ../include/macros.h ../include/constants.h ../include/obj_data.h \
@@ -56,10 +54,8 @@ $(OBJ)/search.o: search.cc ../include/structs.h ../include/defs.h \
   ../include/room_data.h ../include/search.h ../include/weather.h \
   ../include/zone_data.h ../include/ban.h ../include/comm.h \
   ../include/utils.h ../include/handler.h ../include/db.h \
-  /usr/local/pgsql/include/libpq-fe.h \
-  /usr/local/pgsql/include/postgres_ext.h ../include/spells.h \
-  ../include/screen.h ../include/vehicle.h ../include/fight.h \
-  ../include/security.h ../include/actions.h ../include/house.h \
-  ../include/prog.h
+  ../include/spells.h ../include/screen.h ../include/vehicle.h \
+  ../include/fight.h ../include/security.h ../include/actions.h \
+  ../include/house.h ../include/prog.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 OBJFILES= $(OBJ)/prog.o $(OBJ)/search.o
