--- a/src/social/Makefile-depend
+++ b/src/social/Makefile-depend
@@ -24,8 +24,7 @@ $(OBJ)/act.social.o: act.social.cc ../include/structs.h ../include/defs.h \
   ../include/room_data.h ../include/search.h ../include/weather.h \
   ../include/zone_data.h ../include/ban.h ../include/utils.h \
   ../include/comm.h ../include/handler.h ../include/db.h \
-  /usr/local/pgsql/include/libpq-fe.h \
-  /usr/local/pgsql/include/postgres_ext.h ../include/spells.h
+  ../include/spells.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/language.o: language.cc ../include/tmpstr.h ../include/interpreter.h \
   ../include/defs.h ../include/constants.h ../include/language.h \
