--- a/src/util/Makefile-depend
+++ b/src/util/Makefile-depend
@@ -23,8 +23,7 @@ $(OBJ)/accstr.o: accstr.cc ../include/interpreter.h ../include/defs.h \
   ../include/combat_data_list.h ../include/safe_list.h \
   ../include/account.h ../include/desc_data.h ../include/room_data.h \
   ../include/search.h ../include/weather.h ../include/zone_data.h \
-  ../include/ban.h ../include/db.h /usr/local/pgsql/include/libpq-fe.h \
-  /usr/local/pgsql/include/postgres_ext.h
+  ../include/ban.h ../include/db.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/graph.o: graph.cc ../include/structs.h ../include/defs.h \
   ../include/macros.h ../include/constants.h ../include/obj_data.h \
@@ -52,10 +51,9 @@ $(OBJ)/graph.o: graph.cc ../include/structs.h ../include/defs.h \
   ../include/room_data.h ../include/search.h ../include/weather.h \
   ../include/zone_data.h ../include/ban.h ../include/utils.h \
   ../include/comm.h ../include/handler.h ../include/db.h \
-  /usr/local/pgsql/include/libpq-fe.h \
-  /usr/local/pgsql/include/postgres_ext.h ../include/spells.h \
-  ../include/vehicle.h ../include/fight.h ../include/char_class.h \
-  ../include/actions.h ../include/mobact.h ../include/accstr.h
+  ../include/spells.h ../include/vehicle.h ../include/fight.h \
+  ../include/char_class.h ../include/actions.h ../include/mobact.h \
+  ../include/accstr.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/handler.o: handler.cc ../include/structs.h ../include/defs.h \
   ../include/macros.h ../include/constants.h ../include/obj_data.h \
@@ -82,8 +80,7 @@ $(OBJ)/handler.o: handler.cc ../include/structs.h ../include/defs.h \
   ../include/account.h ../include/desc_data.h ../include/interpreter.h \
   ../include/room_data.h ../include/search.h ../include/weather.h \
   ../include/zone_data.h ../include/ban.h ../include/utils.h \
-  ../include/comm.h ../include/db.h /usr/local/pgsql/include/libpq-fe.h \
-  /usr/local/pgsql/include/postgres_ext.h ../include/handler.h \
+  ../include/comm.h ../include/db.h ../include/handler.h \
   ../include/spells.h ../include/screen.h ../include/vehicle.h \
   ../include/vendor.h ../include/clan.h ../include/smokes.h \
   ../include/materials.h ../include/login.h ../include/char_class.h \
@@ -142,9 +139,7 @@ $(OBJ)/modify.o: modify.cc ../include/structs.h ../include/defs.h \
   ../include/account.h ../include/desc_data.h ../include/interpreter.h \
   ../include/room_data.h ../include/search.h ../include/weather.h \
   ../include/zone_data.h ../include/ban.h ../include/utils.h \
-  ../include/handler.h ../include/db.h \
-  /usr/local/pgsql/include/libpq-fe.h \
-  /usr/local/pgsql/include/postgres_ext.h ../include/comm.h \
+  ../include/handler.h ../include/db.h ../include/comm.h \
   ../include/spells.h ../include/mail.h ../include/boards.h \
   ../include/login.h ../include/screen.h ../include/accstr.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
@@ -203,8 +198,7 @@ $(OBJ)/tmpstr.o: tmpstr.cc ../include/interpreter.h ../include/defs.h \
   ../include/combat_data_list.h ../include/safe_list.h \
   ../include/account.h ../include/desc_data.h ../include/room_data.h \
   ../include/search.h ../include/weather.h ../include/zone_data.h \
-  ../include/ban.h ../include/db.h /usr/local/pgsql/include/libpq-fe.h \
-  /usr/local/pgsql/include/postgres_ext.h
+  ../include/ban.h ../include/db.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/utils.o: utils.cc ../include/structs.h ../include/defs.h \
   ../include/macros.h ../include/constants.h ../include/obj_data.h \
@@ -233,8 +227,6 @@ $(OBJ)/utils.o: utils.cc ../include/structs.h ../include/defs.h \
   ../include/zone_data.h ../include/ban.h ../include/utils.h \
   ../include/comm.h ../include/screen.h ../include/spells.h \
   ../include/handler.h ../include/security.h ../include/db.h \
-  /usr/local/pgsql/include/libpq-fe.h \
-  /usr/local/pgsql/include/postgres_ext.h ../include/char_class.h \
-  ../include/actions.h ../include/mobact.h
+  ../include/char_class.h ../include/actions.h ../include/mobact.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 OBJFILES= $(OBJ)/accstr.o $(OBJ)/graph.o $(OBJ)/handler.o $(OBJ)/memtrack.o $(OBJ)/modify.o $(OBJ)/random.o $(OBJ)/sight.o $(OBJ)/tmpstr.o $(OBJ)/utils.o
