--- a/src/clan/Makefile-depend
+++ b/src/clan/Makefile-depend
@@ -1,32 +1,4 @@
-$(OBJ)/clan.o: clan.cc ../include/structs.h ../include/defs.h \
-  ../include/macros.h ../include/constants.h ../include/obj_data.h \
-  ../include/xml_utils.h /usr/include/libxml2/libxml/parser.h \
-  /usr/include/libxml2/libxml/xmlversion.h \
-  /usr/include/libxml2/libxml/xmlexports.h \
-  /usr/include/libxml2/libxml/tree.h \
-  /usr/include/libxml2/libxml/xmlstring.h \
-  /usr/include/libxml2/libxml/xmlregexp.h \
-  /usr/include/libxml2/libxml/dict.h /usr/include/libxml2/libxml/hash.h \
-  /usr/include/libxml2/libxml/valid.h \
-  /usr/include/libxml2/libxml/xmlerror.h \
-  /usr/include/libxml2/libxml/list.h \
-  /usr/include/libxml2/libxml/xmlautomata.h \
-  /usr/include/libxml2/libxml/entities.h \
-  /usr/include/libxml2/libxml/encoding.h \
-  /usr/include/libxml2/libxml/xmlIO.h \
-  /usr/include/libxml2/libxml/globals.h /usr/include/libxml2/libxml/SAX.h \
-  /usr/include/libxml2/libxml/xlink.h /usr/include/libxml2/libxml/SAX2.h \
-  /usr/include/libxml2/libxml/xmlmemory.h \
-  /usr/include/libxml2/libxml/threads.h ../include/tmpstr.h \
-  ../include/creature_list.h ../include/creature.h \
-  ../include/combat_data_list.h ../include/safe_list.h \
-  ../include/account.h ../include/desc_data.h ../include/interpreter.h \
-  ../include/room_data.h ../include/search.h ../include/weather.h \
-  ../include/zone_data.h ../include/ban.h ../include/utils.h \
-  ../include/comm.h ../include/security.h ../include/screen.h \
-  ../include/handler.h ../include/db.h ../include/house.h \
-  ../include/clan.h ../include/char_class.h ../include/actions.h \
-  ../include/spells.h ../include/mobact.h ../include/accstr.h \
-  ../include/player_table.h
-	$(CXX) $(CXXFLAGS) -o $@ -c $<
+$(OBJ)/clan.o : clan.cc \
+	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/security.h $(INCLUDE)/handler.h $(INCLUDE)/db.h $(INCLUDE)/screen.h $(INCLUDE)/house.h $(INCLUDE)/clan.h $(INCLUDE)/char_class.h $(INCLUDE)/tmpstr.h $(INCLUDE)/accstr.h $(INCLUDE)/player_table.h 
+	$(CXX) -c $(CXXFLAGS) clan.cc              -o $(OBJ)/clan.o
 OBJFILES= $(OBJ)/clan.o
