--- a/src/quest/Makefile-depend
+++ b/src/quest/Makefile-depend
@@ -1,31 +1,4 @@
-$(OBJ)/quest.o: quest.cc /usr/include/libxml2/libxml/parser.h \
-  /usr/include/libxml2/libxml/xmlversion.h \
-  /usr/include/libxml2/libxml/xmlexports.h \
-  /usr/include/libxml2/libxml/tree.h \
-  /usr/include/libxml2/libxml/xmlstring.h \
-  /usr/include/libxml2/libxml/xmlregexp.h \
-  /usr/include/libxml2/libxml/dict.h /usr/include/libxml2/libxml/hash.h \
-  /usr/include/libxml2/libxml/valid.h \
-  /usr/include/libxml2/libxml/xmlerror.h \
-  /usr/include/libxml2/libxml/list.h \
-  /usr/include/libxml2/libxml/xmlautomata.h \
-  /usr/include/libxml2/libxml/entities.h \
-  /usr/include/libxml2/libxml/encoding.h \
-  /usr/include/libxml2/libxml/xmlIO.h \
-  /usr/include/libxml2/libxml/globals.h /usr/include/libxml2/libxml/SAX.h \
-  /usr/include/libxml2/libxml/xlink.h /usr/include/libxml2/libxml/SAX2.h \
-  /usr/include/libxml2/libxml/xmlmemory.h \
-  /usr/include/libxml2/libxml/threads.h ../include/xml_utils.h \
-  ../include/tmpstr.h ../include/structs.h ../include/defs.h \
-  ../include/macros.h ../include/constants.h ../include/obj_data.h \
-  ../include/creature_list.h ../include/creature.h \
-  ../include/combat_data_list.h ../include/safe_list.h \
-  ../include/account.h ../include/desc_data.h ../include/interpreter.h \
-  ../include/room_data.h ../include/search.h ../include/weather.h \
-  ../include/zone_data.h ../include/ban.h ../include/comm.h \
-  ../include/utils.h ../include/db.h ../include/editor.h \
-  ../include/prog.h ../include/spells.h ../include/quest.h \
-  ../include/player_table.h ../include/handler.h ../include/screen.h \
-  ../include/security.h
-	$(CXX) $(CXXFLAGS) -o $@ -c $<
+$(OBJ)/quest.o : quest.cc \
+	$(INCLUDE)/xml_utils.h $(INCLUDE)/structs.h $(INCLUDE)/comm.h $(INCLUDE)/utils.h $(INCLUDE)/interpreter.h $(INCLUDE)/db.h $(INCLUDE)/editor.h $(INCLUDE)/spells.h $(INCLUDE)/quest.h $(INCLUDE)/player_table.h $(INCLUDE)/handler.h $(INCLUDE)/screen.h $(INCLUDE)/tmpstr.h $(INCLUDE)/utils.h $(INCLUDE)/security.h $(INCLUDE)/player_table.h 
+	$(CXX) -c $(CXXFLAGS) quest.cc             -o $(OBJ)/quest.o
 OBJFILES= $(OBJ)/quest.o
