--- a/src/util/Makefile-depend
+++ b/src/util/Makefile-depend
@@ -1,232 +1,28 @@
-$(OBJ)/accstr.o: accstr.cc ../include/interpreter.h ../include/defs.h \
-  ../include/utils.h ../include/structs.h ../include/macros.h \
-  ../include/constants.h ../include/obj_data.h ../include/xml_utils.h \
-  /usr/include/libxml2/libxml/parser.h \
-  /usr/include/libxml2/libxml/xmlversion.h \
-  /usr/include/libxml2/libxml/xmlexports.h \
-  /usr/include/libxml2/libxml/tree.h \
-  /usr/include/libxml2/libxml/xmlstring.h \
-  /usr/include/libxml2/libxml/xmlregexp.h \
-  /usr/include/libxml2/libxml/dict.h /usr/include/libxml2/libxml/hash.h \
-  /usr/include/libxml2/libxml/valid.h \
-  /usr/include/libxml2/libxml/xmlerror.h \
-  /usr/include/libxml2/libxml/list.h \
-  /usr/include/libxml2/libxml/xmlautomata.h \
-  /usr/include/libxml2/libxml/entities.h \
-  /usr/include/libxml2/libxml/encoding.h \
-  /usr/include/libxml2/libxml/xmlIO.h \
-  /usr/include/libxml2/libxml/globals.h /usr/include/libxml2/libxml/SAX.h \
-  /usr/include/libxml2/libxml/xlink.h /usr/include/libxml2/libxml/SAX2.h \
-  /usr/include/libxml2/libxml/xmlmemory.h \
-  /usr/include/libxml2/libxml/threads.h ../include/tmpstr.h \
-  ../include/creature_list.h ../include/creature.h \
-  ../include/combat_data_list.h ../include/safe_list.h \
-  ../include/account.h ../include/desc_data.h ../include/room_data.h \
-  ../include/search.h ../include/weather.h ../include/zone_data.h \
-  ../include/ban.h ../include/db.h
-	$(CXX) $(CXXFLAGS) -o $@ -c $<
-$(OBJ)/graph.o: graph.cc ../include/structs.h ../include/defs.h \
-  ../include/macros.h ../include/constants.h ../include/obj_data.h \
-  ../include/xml_utils.h /usr/include/libxml2/libxml/parser.h \
-  /usr/include/libxml2/libxml/xmlversion.h \
-  /usr/include/libxml2/libxml/xmlexports.h \
-  /usr/include/libxml2/libxml/tree.h \
-  /usr/include/libxml2/libxml/xmlstring.h \
-  /usr/include/libxml2/libxml/xmlregexp.h \
-  /usr/include/libxml2/libxml/dict.h /usr/include/libxml2/libxml/hash.h \
-  /usr/include/libxml2/libxml/valid.h \
-  /usr/include/libxml2/libxml/xmlerror.h \
-  /usr/include/libxml2/libxml/list.h \
-  /usr/include/libxml2/libxml/xmlautomata.h \
-  /usr/include/libxml2/libxml/entities.h \
-  /usr/include/libxml2/libxml/encoding.h \
-  /usr/include/libxml2/libxml/xmlIO.h \
-  /usr/include/libxml2/libxml/globals.h /usr/include/libxml2/libxml/SAX.h \
-  /usr/include/libxml2/libxml/xlink.h /usr/include/libxml2/libxml/SAX2.h \
-  /usr/include/libxml2/libxml/xmlmemory.h \
-  /usr/include/libxml2/libxml/threads.h ../include/tmpstr.h \
-  ../include/creature_list.h ../include/creature.h \
-  ../include/combat_data_list.h ../include/safe_list.h \
-  ../include/account.h ../include/desc_data.h ../include/interpreter.h \
-  ../include/room_data.h ../include/search.h ../include/weather.h \
-  ../include/zone_data.h ../include/ban.h ../include/utils.h \
-  ../include/comm.h ../include/handler.h ../include/db.h \
-  ../include/spells.h ../include/vehicle.h ../include/fight.h \
-  ../include/char_class.h ../include/actions.h ../include/mobact.h \
-  ../include/accstr.h
-	$(CXX) $(CXXFLAGS) -o $@ -c $<
-$(OBJ)/handler.o: handler.cc ../include/structs.h ../include/defs.h \
-  ../include/macros.h ../include/constants.h ../include/obj_data.h \
-  ../include/xml_utils.h /usr/include/libxml2/libxml/parser.h \
-  /usr/include/libxml2/libxml/xmlversion.h \
-  /usr/include/libxml2/libxml/xmlexports.h \
-  /usr/include/libxml2/libxml/tree.h \
-  /usr/include/libxml2/libxml/xmlstring.h \
-  /usr/include/libxml2/libxml/xmlregexp.h \
-  /usr/include/libxml2/libxml/dict.h /usr/include/libxml2/libxml/hash.h \
-  /usr/include/libxml2/libxml/valid.h \
-  /usr/include/libxml2/libxml/xmlerror.h \
-  /usr/include/libxml2/libxml/list.h \
-  /usr/include/libxml2/libxml/xmlautomata.h \
-  /usr/include/libxml2/libxml/entities.h \
-  /usr/include/libxml2/libxml/encoding.h \
-  /usr/include/libxml2/libxml/xmlIO.h \
-  /usr/include/libxml2/libxml/globals.h /usr/include/libxml2/libxml/SAX.h \
-  /usr/include/libxml2/libxml/xlink.h /usr/include/libxml2/libxml/SAX2.h \
-  /usr/include/libxml2/libxml/xmlmemory.h \
-  /usr/include/libxml2/libxml/threads.h ../include/tmpstr.h \
-  ../include/creature_list.h ../include/creature.h \
-  ../include/combat_data_list.h ../include/safe_list.h \
-  ../include/account.h ../include/desc_data.h ../include/interpreter.h \
-  ../include/room_data.h ../include/search.h ../include/weather.h \
-  ../include/zone_data.h ../include/ban.h ../include/utils.h \
-  ../include/comm.h ../include/db.h ../include/handler.h \
-  ../include/spells.h ../include/screen.h ../include/vehicle.h \
-  ../include/vendor.h ../include/clan.h ../include/smokes.h \
-  ../include/materials.h ../include/login.h ../include/char_class.h \
-  ../include/actions.h ../include/mobact.h ../include/help.h \
-  ../include/fight.h ../include/security.h ../include/flow_room.h
-	$(CXX) $(CXXFLAGS) -o $@ -c $<
-$(OBJ)/memtrack.o: memtrack.cc ../include/memtrack.h ../include/utils.h \
-  ../include/structs.h ../include/defs.h ../include/macros.h \
-  ../include/constants.h ../include/obj_data.h ../include/xml_utils.h \
-  /usr/include/libxml2/libxml/parser.h \
-  /usr/include/libxml2/libxml/xmlversion.h \
-  /usr/include/libxml2/libxml/xmlexports.h \
-  /usr/include/libxml2/libxml/tree.h \
-  /usr/include/libxml2/libxml/xmlstring.h \
-  /usr/include/libxml2/libxml/xmlregexp.h \
-  /usr/include/libxml2/libxml/dict.h /usr/include/libxml2/libxml/hash.h \
-  /usr/include/libxml2/libxml/valid.h \
-  /usr/include/libxml2/libxml/xmlerror.h \
-  /usr/include/libxml2/libxml/list.h \
-  /usr/include/libxml2/libxml/xmlautomata.h \
-  /usr/include/libxml2/libxml/entities.h \
-  /usr/include/libxml2/libxml/encoding.h \
-  /usr/include/libxml2/libxml/xmlIO.h \
-  /usr/include/libxml2/libxml/globals.h /usr/include/libxml2/libxml/SAX.h \
-  /usr/include/libxml2/libxml/xlink.h /usr/include/libxml2/libxml/SAX2.h \
-  /usr/include/libxml2/libxml/xmlmemory.h \
-  /usr/include/libxml2/libxml/threads.h ../include/tmpstr.h \
-  ../include/creature_list.h ../include/creature.h \
-  ../include/combat_data_list.h ../include/safe_list.h \
-  ../include/account.h ../include/desc_data.h ../include/interpreter.h \
-  ../include/room_data.h ../include/search.h ../include/weather.h \
-  ../include/zone_data.h ../include/ban.h
-	$(CXX) $(CXXFLAGS) -o $@ -c $<
-$(OBJ)/modify.o: modify.cc ../include/structs.h ../include/defs.h \
-  ../include/macros.h ../include/constants.h ../include/obj_data.h \
-  ../include/xml_utils.h /usr/include/libxml2/libxml/parser.h \
-  /usr/include/libxml2/libxml/xmlversion.h \
-  /usr/include/libxml2/libxml/xmlexports.h \
-  /usr/include/libxml2/libxml/tree.h \
-  /usr/include/libxml2/libxml/xmlstring.h \
-  /usr/include/libxml2/libxml/xmlregexp.h \
-  /usr/include/libxml2/libxml/dict.h /usr/include/libxml2/libxml/hash.h \
-  /usr/include/libxml2/libxml/valid.h \
-  /usr/include/libxml2/libxml/xmlerror.h \
-  /usr/include/libxml2/libxml/list.h \
-  /usr/include/libxml2/libxml/xmlautomata.h \
-  /usr/include/libxml2/libxml/entities.h \
-  /usr/include/libxml2/libxml/encoding.h \
-  /usr/include/libxml2/libxml/xmlIO.h \
-  /usr/include/libxml2/libxml/globals.h /usr/include/libxml2/libxml/SAX.h \
-  /usr/include/libxml2/libxml/xlink.h /usr/include/libxml2/libxml/SAX2.h \
-  /usr/include/libxml2/libxml/xmlmemory.h \
-  /usr/include/libxml2/libxml/threads.h ../include/tmpstr.h \
-  ../include/creature_list.h ../include/creature.h \
-  ../include/combat_data_list.h ../include/safe_list.h \
-  ../include/account.h ../include/desc_data.h ../include/interpreter.h \
-  ../include/room_data.h ../include/search.h ../include/weather.h \
-  ../include/zone_data.h ../include/ban.h ../include/utils.h \
-  ../include/handler.h ../include/db.h ../include/comm.h \
-  ../include/spells.h ../include/mail.h ../include/boards.h \
-  ../include/login.h ../include/screen.h ../include/accstr.h
-	$(CXX) $(CXXFLAGS) -o $@ -c $<
-$(OBJ)/random.o: random.cc
-	$(CXX) $(CXXFLAGS) -o $@ -c $<
-$(OBJ)/sight.o: sight.cc ../include/defs.h ../include/creature.h \
-  ../include/combat_data_list.h ../include/safe_list.h \
-  ../include/structs.h ../include/macros.h ../include/constants.h \
-  ../include/obj_data.h ../include/xml_utils.h \
-  /usr/include/libxml2/libxml/parser.h \
-  /usr/include/libxml2/libxml/xmlversion.h \
-  /usr/include/libxml2/libxml/xmlexports.h \
-  /usr/include/libxml2/libxml/tree.h \
-  /usr/include/libxml2/libxml/xmlstring.h \
-  /usr/include/libxml2/libxml/xmlregexp.h \
-  /usr/include/libxml2/libxml/dict.h /usr/include/libxml2/libxml/hash.h \
-  /usr/include/libxml2/libxml/valid.h \
-  /usr/include/libxml2/libxml/xmlerror.h \
-  /usr/include/libxml2/libxml/list.h \
-  /usr/include/libxml2/libxml/xmlautomata.h \
-  /usr/include/libxml2/libxml/entities.h \
-  /usr/include/libxml2/libxml/encoding.h \
-  /usr/include/libxml2/libxml/xmlIO.h \
-  /usr/include/libxml2/libxml/globals.h /usr/include/libxml2/libxml/SAX.h \
-  /usr/include/libxml2/libxml/xlink.h /usr/include/libxml2/libxml/SAX2.h \
-  /usr/include/libxml2/libxml/xmlmemory.h \
-  /usr/include/libxml2/libxml/threads.h ../include/tmpstr.h \
-  ../include/creature_list.h ../include/desc_data.h \
-  ../include/room_data.h ../include/search.h ../include/weather.h \
-  ../include/zone_data.h ../include/ban.h ../include/account.h \
-  ../include/interpreter.h ../include/utils.h ../include/spells.h \
-  ../include/handler.h
-	$(CXX) $(CXXFLAGS) -o $@ -c $<
-$(OBJ)/tmpstr.o: tmpstr.cc ../include/interpreter.h ../include/defs.h \
-  ../include/utils.h ../include/structs.h ../include/macros.h \
-  ../include/constants.h ../include/obj_data.h ../include/xml_utils.h \
-  /usr/include/libxml2/libxml/parser.h \
-  /usr/include/libxml2/libxml/xmlversion.h \
-  /usr/include/libxml2/libxml/xmlexports.h \
-  /usr/include/libxml2/libxml/tree.h \
-  /usr/include/libxml2/libxml/xmlstring.h \
-  /usr/include/libxml2/libxml/xmlregexp.h \
-  /usr/include/libxml2/libxml/dict.h /usr/include/libxml2/libxml/hash.h \
-  /usr/include/libxml2/libxml/valid.h \
-  /usr/include/libxml2/libxml/xmlerror.h \
-  /usr/include/libxml2/libxml/list.h \
-  /usr/include/libxml2/libxml/xmlautomata.h \
-  /usr/include/libxml2/libxml/entities.h \
-  /usr/include/libxml2/libxml/encoding.h \
-  /usr/include/libxml2/libxml/xmlIO.h \
-  /usr/include/libxml2/libxml/globals.h /usr/include/libxml2/libxml/SAX.h \
-  /usr/include/libxml2/libxml/xlink.h /usr/include/libxml2/libxml/SAX2.h \
-  /usr/include/libxml2/libxml/xmlmemory.h \
-  /usr/include/libxml2/libxml/threads.h ../include/tmpstr.h \
-  ../include/creature_list.h ../include/creature.h \
-  ../include/combat_data_list.h ../include/safe_list.h \
-  ../include/account.h ../include/desc_data.h ../include/room_data.h \
-  ../include/search.h ../include/weather.h ../include/zone_data.h \
-  ../include/ban.h ../include/db.h
-	$(CXX) $(CXXFLAGS) -o $@ -c $<
-$(OBJ)/utils.o: utils.cc ../include/structs.h ../include/defs.h \
-  ../include/macros.h ../include/constants.h ../include/obj_data.h \
-  ../include/xml_utils.h /usr/include/libxml2/libxml/parser.h \
-  /usr/include/libxml2/libxml/xmlversion.h \
-  /usr/include/libxml2/libxml/xmlexports.h \
-  /usr/include/libxml2/libxml/tree.h \
-  /usr/include/libxml2/libxml/xmlstring.h \
-  /usr/include/libxml2/libxml/xmlregexp.h \
-  /usr/include/libxml2/libxml/dict.h /usr/include/libxml2/libxml/hash.h \
-  /usr/include/libxml2/libxml/valid.h \
-  /usr/include/libxml2/libxml/xmlerror.h \
-  /usr/include/libxml2/libxml/list.h \
-  /usr/include/libxml2/libxml/xmlautomata.h \
-  /usr/include/libxml2/libxml/entities.h \
-  /usr/include/libxml2/libxml/encoding.h \
-  /usr/include/libxml2/libxml/xmlIO.h \
-  /usr/include/libxml2/libxml/globals.h /usr/include/libxml2/libxml/SAX.h \
-  /usr/include/libxml2/libxml/xlink.h /usr/include/libxml2/libxml/SAX2.h \
-  /usr/include/libxml2/libxml/xmlmemory.h \
-  /usr/include/libxml2/libxml/threads.h ../include/tmpstr.h \
-  ../include/creature_list.h ../include/creature.h \
-  ../include/combat_data_list.h ../include/safe_list.h \
-  ../include/account.h ../include/desc_data.h ../include/interpreter.h \
-  ../include/room_data.h ../include/search.h ../include/weather.h \
-  ../include/zone_data.h ../include/ban.h ../include/utils.h \
-  ../include/comm.h ../include/screen.h ../include/spells.h \
-  ../include/handler.h ../include/security.h ../include/db.h \
-  ../include/char_class.h ../include/actions.h ../include/mobact.h
-	$(CXX) $(CXXFLAGS) -o $@ -c $<
+$(OBJ)/accstr.o : accstr.cc \
+	$(INCLUDE)/interpreter.h $(INCLUDE)/utils.h $(INCLUDE)/db.h 
+	$(CXX) -c $(CXXFLAGS) accstr.cc            -o $(OBJ)/accstr.o
+$(OBJ)/graph.o : graph.cc \
+	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/interpreter.h $(INCLUDE)/handler.h $(INCLUDE)/db.h $(INCLUDE)/spells.h $(INCLUDE)/vehicle.h $(INCLUDE)/fight.h $(INCLUDE)/char_class.h $(INCLUDE)/accstr.h 
+	$(CXX) -c $(CXXFLAGS) graph.cc             -o $(OBJ)/graph.o
+$(OBJ)/handler.o : handler.cc \
+	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/db.h $(INCLUDE)/handler.h $(INCLUDE)/interpreter.h $(INCLUDE)/spells.h $(INCLUDE)/screen.h $(INCLUDE)/vehicle.h $(INCLUDE)/vendor.h $(INCLUDE)/clan.h $(INCLUDE)/smokes.h $(INCLUDE)/materials.h $(INCLUDE)/login.h $(INCLUDE)/char_class.h $(INCLUDE)/help.h $(INCLUDE)/fight.h $(INCLUDE)/security.h $(INCLUDE)/tmpstr.h $(INCLUDE)/utils.h $(INCLUDE)/vendor.h $(INCLUDE)/flow_room.h 
+	$(CXX) -c $(CXXFLAGS) handler.cc           -o $(OBJ)/handler.o
+$(OBJ)/memtrack.o : memtrack.cc \
+	$(INCLUDE)/memtrack.h 
+	$(CXX) -c $(CXXFLAGS) memtrack.cc          -o $(OBJ)/memtrack.o
+$(OBJ)/modify.o : modify.cc \
+	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/interpreter.h $(INCLUDE)/handler.h $(INCLUDE)/db.h $(INCLUDE)/comm.h $(INCLUDE)/spells.h $(INCLUDE)/mail.h $(INCLUDE)/boards.h $(INCLUDE)/login.h $(INCLUDE)/screen.h $(INCLUDE)/accstr.h 
+	$(CXX) -c $(CXXFLAGS) modify.cc            -o $(OBJ)/modify.o
+$(OBJ)/random.o : random.cc \
+
+	$(CXX) -c $(CXXFLAGS) random.cc            -o $(OBJ)/random.o
+$(OBJ)/sight.o : sight.cc \
+	$(INCLUDE)/defs.h $(INCLUDE)/creature.h $(INCLUDE)/utils.h $(INCLUDE)/spells.h $(INCLUDE)/handler.h 
+	$(CXX) -c $(CXXFLAGS) sight.cc             -o $(OBJ)/sight.o
+$(OBJ)/tmpstr.o : tmpstr.cc \
+	$(INCLUDE)/interpreter.h $(INCLUDE)/utils.h $(INCLUDE)/db.h 
+	$(CXX) -c $(CXXFLAGS) tmpstr.cc            -o $(OBJ)/tmpstr.o
+$(OBJ)/utils.o : utils.cc \
+	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/screen.h $(INCLUDE)/spells.h $(INCLUDE)/handler.h $(INCLUDE)/interpreter.h $(INCLUDE)/security.h $(INCLUDE)/db.h $(INCLUDE)/char_class.h $(INCLUDE)/tmpstr.h $(INCLUDE)/spells.h 
+	$(CXX) -c $(CXXFLAGS) utils.cc             -o $(OBJ)/utils.o
 OBJFILES= $(OBJ)/accstr.o $(OBJ)/graph.o $(OBJ)/handler.o $(OBJ)/memtrack.o $(OBJ)/modify.o $(OBJ)/random.o $(OBJ)/sight.o $(OBJ)/tmpstr.o $(OBJ)/utils.o
